# opencascade-configurator

./: .gitignore  BACKEND_README.md  INSTALL_NOW.sh  PROJECT_STATUS.md  QUICK_START.md  README.md  docker-compose.yml  package-lock.json  package.json
frontend/: Dockerfile  package-lock.json  package.json  postcss.config.mjs
frontend/app/: page.tsx
frontend/components/: CADViewer.tsx  ConfigManager.tsx  DynamicParameterForm.tsx  EnhancedViewer3D.tsx  MaterialSelector.tsx  ParametricBox.tsx  ProductCatalog.tsx  ShapeSelector.tsx  Shapes3D.tsx  Viewer3D.tsx
frontend/lib/: api.ts
python-api/: .gitignore  README.md  generate_model.py  requirements.txt  test_occt.py
python-api/core/: exporter.py
python-api/products/: bottle.py  box.py
server/: .dockerignore  Dockerfile  Makefile  PYTHON_SETUP.md  README.md  env.example  package-lock.json  package.json  pyproject.toml  requirements.txt
server/prisma/: schema.prisma  seed.ts
server/scripts/: generate_model.py
server/src/: app.ts
server/src/config/: database.ts
server/src/controllers/: geometryController.ts  productController.ts
server/src/models/: Configuration.ts
server/src/routes/: geometryRoutes.ts  productRoutes.ts
server/src/services/: dxfEngine.ts  modelService.ts  openCascadeService.ts  productService.ts  shapeGenerator.ts
server/src/types/: shapes.ts
