[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-cascade-configurator"
version = "1.0.0"
description = "Backend CAD model generator using PythonOCC"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Proprietary"}
authors = [
    {name = "Open Cascade Configurator Team"}
]

dependencies = [
    # Core PythonOCC dependency
    # Note: Install via conda is recommended
    # conda install -c conda-forge pythonocc-core
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
py-modules = []

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

